# hydro_rs

./: .gitignore  Cargo.toml  README.md  build.rs  example_config.yml  notes.md
python/: make_ic_constant.py  make_ic_sedov.py  make_ic_yee_vortex.py  plot_kelvin_helmholtz.py  plot_slice.py  plot_solution.py  plot_solution_evrard.py  plot_solution_noh.py  plot_solution_sodshock.py  plot_solution_toro.py  plot_solution_vacuum.py  plot_square.py  plot_voronoi.py  plot_without_solution.py  plot_yee.py  riemann_solver.py  utils.py  yee_convergence.py
run/: config.yml  config_yee.yml
src/: cell.rs  cli.rs  engine.rs  equation_of_state.rs  errors.rs  finite_volume_solver.rs  flux.rs  gas_law.rs  gradients.rs  gravity.rs  initial_conditions.rs  kernels.rs  lib.rs  macros.rs  main.rs  part.rs  physical_constants.rs  physical_quantities.rs  riemann_solver.rs  runner.rs  slope_limiters.rs  space.rs  spherical.rs  time_integration.rs  timeline.rs  utils.rs
src/finite_volume_solver/: euler_eqns_fvs.rs  godunov_fvs.rs  muscl_fvs.rs  waf_fvs.rs
src/riemann_solver/: airs.rs  anrs.rs  exact.rs  hllc.rs  linear_advection.rs  pvrs.rs  trrs.rs  tsrs.rs  vacuum.rs
src/runner/: hydrodynamics.rs
src/runner/hydrodynamics/: godunov.rs  optimal_order.rs
tests/: test_gallilean_invariance.rs
tests/common/: mod.rs
