[package]
name = "hydro_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22"
yaml-rust = "0.4"
clap = {version = "3.2", features = ["derive"]}
derive_more = "0.99"
meshless_voronoi = {version = "0.3.1", features = ["rayon"] }
hdf5 = "0.8.1"
rayon = "1.6.1"

[dev-dependencies]
float-cmp = "0.9"
