[package]
name = "hydro_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.27"
yaml-rust = "0.4"
clap = { version = "3.2", features = ["derive"] }
derive_more = "0.99"
meshless_voronoi = { version = "0.6.0", default-features = false, features = ["rayon", "rug"] }
hdf5 = { version = "0.8.1" }
rayon = "1.10"
rstar = "0.10"
num_enum = { version = "0.7.2", default-features = false }
rand = "0.8.5"

[dev-dependencies]
float-cmp = "0.9"
