[package]
name = "mvmm_hydro"
description = "A moving mesh hydrodynamics (CFD) solver prioritizing flexibility over raw performance."
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0+"
readme = "README.md"
authors = ["Yolan Uyttenhove"]
repository = "https://github.com/yuyttenhove/hydro_rs"
documentation = "https://docs.rs/mvmm_hydro"
keywords = ["voronoi", "hydrodynamics", "CFD", "physics"]
categories = ["simulation", "science", "mathematics"]
exclude = ["run", "python"]

[dependencies]
glam = "0.27"
yaml-rust = { version = "0.4", optional = true }
clap = { version = "^4.5", features = ["derive"], optional = true}
meshless_voronoi = { version = "0.6.1", default-features = false, features = ["rayon", "rug"] }
hdf5 = { version = "0.8.1" }
rayon = "1.10"
rstar = "0.10"
num_enum = { version = "0.7.2", default-features = false }
rand = "0.8.5"

[dev-dependencies]
float-cmp = "0.9"

[features]
bin = ["yaml-rust", "clap"]

[[bin]]
name = "mvmm-hydro-bin"
path = "src/bin/main.rs"
required-features = ["bin"]
